add auth related JWT support and improve test coverage on non-generated files.
